[project]
license = {text = "GPL-3.0-or-later"}

[tool.poetry]
name = "calorimetry-analysis"
version = "0.1.1a0"
description = "Analyze calorimetry temperature changes with GUI in Jupyter"
authors = ["gutow <gutow@uwosh.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipywidgets = "^8.1.5"
lmfit = "^1.3.2"
plotly = "^6.0.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"
anywidget = "^0.9.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
